--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for MojoX-Renderer-Xslate
 
+0.10  Tue May  6 13:00:00 UTC 2014
+    - Tweak to work with FormHelpers plugin
+
 0.09  Thu Jun  6 03:34:47 UTC 2013
     - Fixed exception handling. (GH #4; RT #84324)
 
