--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for MojoX-Renderer-Xslate
 
+{{NEXT}}
+
+0.093 Mon Oct 16 14:50:00 UTC 2017
+    - Update deprecated mojolicious methods to support latest release
+
 0.10  Tue May  6 13:00:00 UTC 2014
     - Tweak to work with FormHelpers plugin
 
